load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "constants.go",
        "doc.go",
        "errors.go",
        "keys.go",
        "printer.go",
        "spans.go",
        "sql.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/keys",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/roachpb:go_default_library",
        "//pkg/util/encoding:go_default_library",
        "//pkg/util/uuid:go_default_library",
        "//vendor/github.com/cockroachdb/errors:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "keys_test.go",
        "printer_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/roachpb:go_default_library",
        "//pkg/testutils:go_default_library",
        "//pkg/util/bitarray:go_default_library",
        "//pkg/util/duration:go_default_library",
        "//pkg/util/encoding:go_default_library",
        "//pkg/util/keysutil:go_default_library",
        "//pkg/util/leaktest:go_default_library",
        "//pkg/util/uuid:go_default_library",
        "//vendor/github.com/cockroachdb/apd/v2:go_default_library",
        "//vendor/github.com/cockroachdb/errors:go_default_library",
        "//vendor/github.com/stretchr/testify/require:go_default_library",
    ],
)
