load("//build/bazelutil/unused_checker:unused.bzl", "get_x_data")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "keyvisualizer",
    srcs = [
        "doc.go",
        "key_visualizer.go",
        "knobs.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/keyvisualizer",
    visibility = ["//visibility:public"],
    deps = ["//pkg/base"],
)

get_x_data(name = "get_x_data")
