load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "migration",
    srcs = [
        "helpers.go",
        "migration.go",
        "system_migration.go",
        "tenant_migration.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/migration",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/clusterversion",
        "//pkg/keys",
        "//pkg/kv",
        "//pkg/roachpb",
        "//pkg/server/serverpb",
        "//pkg/settings/cluster",
        "//pkg/sql/catalog/lease",
        "//pkg/sql/sqlutil",
        "//pkg/util/log",
        "@com_github_cockroachdb_logtags//:logtags",
    ],
)
