load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "migration",
    srcs = [
        "helpers.go",
        "migration.go",
        "system_migration.go",
        "tenant_migration.go",
        "testing_knobs.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/migration",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/base",
        "//pkg/clusterversion",
        "//pkg/jobs/jobspb",
        "//pkg/keys",
        "//pkg/kv",
        "//pkg/kv/kvclient/kvcoord:with-mocks",
        "//pkg/roachpb:with-mocks",
        "//pkg/server/serverpb",
        "//pkg/settings/cluster",
        "//pkg/sql/catalog/descs",
        "//pkg/sql/catalog/lease",
        "//pkg/sql/sqlutil",
        "//pkg/util/log",
        "//pkg/util/stop",
        "@com_github_cockroachdb_logtags//:logtags",
    ],
)
